ansible-rke2/roles/rancher/templates/rancher-vs.yml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: rancher-vs
  namespace: networking
spec:
  hosts:
    - rancher.moonlightgrove.love
  gateways:
    - networking/galaxia-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: rancher.cattle-system.svc.cluster.local
            port:
              number: 80
